Docs: 2027, Systemcore, and the things that catch people out
Brings the documentation up to what the library now is, and corrects two pages
that had become actively wrong.

The correction that matters is in the testing guide. It said the HAL could not
be loaded in a unit test and that anything touching it - Timer, DriverStation,
the command scheduler - belonged in simulateJava. That was true when written and
is not true now: the natives load, and commands can be scheduled and run in a
JUnit test. Leaving it would have sent people to the simulator for things they
can unit-test.

Added to the Systemcore page, first in the list of things that catch you out:
Commands v3 needs two --add-opens flags or nothing runs, with the explanation of
why the failure appears somewhere unrelated and much later.

Also new: DualIMU, with what it does and does not change (heading still comes
from the primary alone, and why); SystemCoreSim and how to reach the trouble
states - a full disk, a pinned core, a brownout - that nobody can reproduce on a
real robot without breaking it.

Co-Authored-By: Claude Opus 5 <noreply@anthropic.com>